--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
 
-          <div class="col-md-12" style="position: relative;" data-aos="fade-up">
+          <div class="col-md-12" style="position: relative; overflow:hidden;" data-aos="fade-up">
             
             <img src="images/about.svg" alt="Image" class="img-fluid img-absolute">
 
@@ -412,11 +412,11 @@
       <div class="container">
         <div class="row mb-5 site-section border-bottom">
           <div class="col-lg-7">
-            <img src="images/do_ui_kit_download_cta_floating_devices-2x.png" alt="Image" class="img-fluid">
+            <img src="img/ui.svg" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
-            <h2 class="text-black">Get an excellent UI website</h2>
-            <p class="mb-4">wayve.codes provides every single detailing , so that you user/client will get more connected to you.</p>
+            <h2 class="text-black">Get customized and beautifully designed User Interfaces.</h2>
+            <p class="mb-4">We at wayve.codes always provide every single detailing, so that you user/client will feel more connected to you.</p>
             <!-- <ul class="ul-check mb-5 list-unstyled success">
               <li>Adipisci excepturi aliquam</li>
               <li>Deleniti labore reiciendis</li>
@@ -438,11 +438,11 @@
 
         <div class="mt-5 row mb-5 site-section ">
           <div class="col-lg-7 order-1 order-lg-2">
-            <img src="images/do_ui_kit_hero_floating_devices-2x.png" alt="Image" class="img-fluid">
+            <img src="img/quick.svg" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-5 pr-lg-5 mr-auto mt-5 order-2 order-lg-1">
             <h2 class="text-black">As fast as possible</h2>
-            <p class="mb-4">We deliver websites in least amount of time in market and in reasonable prices. we know value of time</p>
+            <p class="mb-4">We deliver websites in least amount of time in market and in reasonable prices. we know the value of time.</p>
             <!-- <ul class="ul-check mb-5 list-unstyled success">
               <li>Laborum enim quasi at modi</li>
               <li>Ad at tempore</li>
