--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h1>Get yourself an online presence.</h1>
                 <p class="mb-5">We make an online presence for you and your business to take your business to new heights.</p>
                 <div>
-                  <a href="#" class="btn btn-primary mr-2 mb-2">Get Started</a>
+                  <a href="#pricing-section" class="btn btn-primary mr-2 mb-2">Get Started</a>
                 </div>
               </div>
               
