--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <input type="submit" value="Send Message" class="btn btn-primary mr-2 mb-2 pageclip-form__submit">
+                  <button type="submit"  class="btn btn-primary mr-2 mb-2 pageclip-form__submit">Send Message</button>
                 </div>
               </div>
 
@@ -678,13 +678,17 @@
             </p>
           </div>
         </div>
-        <div class="row">
-          
-          <div class="col-md-12">
-            <h1><strong>Developers</strong></h1>
-            <p class="mb-0">
-              <img src="images/programmer.png" alt="" srcset=""><p><a href="http://iamayushdas.me"><strong>Ayush Das</strong></a> </p><img src="images/programmer(2).png" alt="" srcset=""><p> <a href="images/RaghavPahwaResume_2.pdf"><strong>Raghav Pahwa</strong></a> </p>
-            </p>
+        <div class="row d-flex flex-column">
+          <h1 class="text-center justify-content-center"><strong>Developers</strong></h1>
+          <div class="col-md-12 d-flex justify-content-center">
+              <div class="d-flex pr-4">
+                <img src="images/programmer.png" class="d-block" alt="" srcset="">
+                <a href="http://iamayushdas.me" class="d-block"><strong>Ayush Das</strong></a>
+              </div>
+              <div class="d-flex">
+                <img src="images/programmer(2).png" alt="" class="d-block" srcset="">
+                <a href="http://raghavpahwa.ml" class="d-block"><strong>Raghav Pahwa</strong></a>
+              </div>
            
           </div>
         </div>
