Added fake people

--- a/index.html
+++ b/index.html
@@ -426,14 +426,14 @@
             <div class="author-box">
               <div class="d-flex mb-4">
                 <div class="mr-3">
-                  <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle">
+                  <img src="images/ai_1.jpg" alt="Image" class="img-fluid rounded-circle">
                 </div>
                 <div class="mr-auto text-black">
-                  <strong class="font-weight-bold mb-0">Amalia G.</strong> <br>
-                  Co-Founder, XYZ Inc.
+                  <strong class="font-weight-bold mb-0">vicky</strong> <br>
+                  Client
                 </div>
               </div>
-              <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae ipsa asperiores inventore aperiam iure?&rdquo;</blockquote>
+              <blockquote>One of the best websites creators I have ever worked with. Highly recommended.</blockquote>
             </div>
           </div>
         </div>
@@ -454,14 +454,14 @@
             <div class="author-box">
               <div class="d-flex mb-4">
                 <div class="mr-3">
-                  <img src="images/person_4.jpg" alt="Image" class="img-fluid rounded-circle">
+                  <img src="images/ai_2.jpg" alt="Image" class="img-fluid rounded-circle">
                 </div>
                 <div class="mr-auto text-black">
-                  <strong class="font-weight-bold mb-0">Darren K.</strong> <br>
-                  Co-Founder, XYZ Inc.
+                  <strong class="font-weight-bold mb-0">Hemant</strong> <br>
+                  Client
                 </div>
               </div>
-              <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae ipsa asperiores inventore aperiam iure?&rdquo;</blockquote>
+              <blockquote>Fast service and deliver superb websites super quickly and great customer service as well.</blockquote>
             </div>
           </div>
         </div>
