--- a/fonts/icomoon/demo.html
+++ b/fonts/icomoon/demo.html
@@ -7903,10 +7903,10 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-hacker-news">
+                <span class="icon-hacker- ">
                 
                 </span>
-                <span class="mls"> icon-hacker-news</span>
+                <span class="mls"> icon-hacker- </span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="f1d4" class="unit size1of2" />
@@ -8335,10 +8335,10 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-newspaper-o">
+                <span class="icon- paper-o">
                 
                 </span>
-                <span class="mls"> icon-newspaper-o</span>
+                <span class="mls"> icon- paper-o</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="f1ea" class="unit size1of2" />
