--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             <div class="row mb-4">
               <div class="col-lg-4 mr-auto">
                 <h1>Get yourself an online presence.</h1>
-                <p class="mb-5">We make an online presence for you and your business to take your business to new heights.</p>
+                <p class="mb-5">We make an online presence for you and take your business to new heights.</p>
                 <div>
-                  <a href="#" class="btn btn-primary mr-2 mb-2">Get Started</a>
+                  <a href="#pricing-section" class="btn btn-primary mr-2 mb-2">Get Started</a>
                 </div>
               </div>
               
@@ -577,7 +577,7 @@
             <div class="h-entry">
               <img src="images/Rangsaaz.png" alt="Image" class="img-fluid">
               <h2><a href="#">Rangsaaz2.0</a></h2>
-              <div class="meta mb-4">Jayshree <span class="mx-2">&bullet;</span> March, 2020<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
+              <div class="meta mb-4">Jayshree <span class="mx-2">&bullet;</span> March, 2020<span class="mx-2">&bullet;</span> <a href="#"> </a></div>
               <p>Have created website for a cultural event commonly known as RANGSAAZ which was going to happen in Delhi haat</p>
               <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div> 
@@ -586,7 +586,7 @@
             <div class="h-entry">
               <img src="images/collcart.png" alt="Image" class="img-fluid">
               <h2><a href="#">Collcart</a></h2>
-              <div class="meta mb-4">Ayush <span class="mx-2">&bullet;</span> Sep, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
+              <div class="meta mb-4">Ayush <span class="mx-2">&bullet;</span> Sep, 2019<span class="mx-2">&bullet;</span> <a href="#"> </a></div>
               <p>A merchandise website for college society.</p>
               <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
@@ -595,7 +595,7 @@
             <div class="h-entry">
               <img src="images/kruma-fix.png" alt="Image" class="img-fluid">
               <h2><a href="#">Kuruma-fx</a></h2>
-              <div class="meta mb-4">Tech-fanatics <span class="mx-2">&bullet;</span> April, 2020<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
+              <div class="meta mb-4">Tech-fanatics <span class="mx-2">&bullet;</span> April, 2020<span class="mx-2">&bullet;</span> <a href="#"> </a></div>
               <p>We have made website for car designing company.</p>
               <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div> 
